--- a/web/src/index.html
+++ b/web/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>RECIPES</title>
-    <link href="main.css" rel="stylesheet" />
+    <!-- <link href="main.css" rel="stylesheet" /> -->
   </head>
   <body>
-    <div id="app-root"></div>
+    <div id="root"></div>
   </body>
 </html>
